# xgboost_musa

./: CMakeLists.txt  README.md
.github/workflows/: i386.yml  jvm_tests.yml  main.yml  python_tests.yml  python_wheels.yml  r_nold.yml  r_tests.yml  scorecards.yml  update_rapids.yml
cmake/: Utils.cmake
include/xgboost/: base.h  context.h  data.h  host_device_vector.h  span.h
jvm-packages/: pom.xml
src/: CMakeLists.txt  context.mu
src/c_api/: c_api.cc
src/collective/: coll.cc
src/common/: algorithm.muh  bitfield.h  common.h  common.mu  compressed_iterator.h  cuda_context.cuh  cuda_pinned_allocator.h  device_helpers.muh  device_vector.mu  device_vector.muh  error_msg.h  hist_util.mu  hist_util.muh  host_device_vector.mu  linalg_op.h  linalg_op.muh  musa_context.muh  musa_pinned_allocator.h  numeric.mu  quantile.mu  quantile.muh  random.mu  ranking_utils.h  ranking_utils.mu  ranking_utils.muh  stats.mu  stats.muh  threading_utils.muh
src/data/: array_interface.cc  array_interface.h  array_interface.mu  data.cc  data.mu  device_adapter.muh  ellpack_page.cc  ellpack_page.mu  ellpack_page.muh  ellpack_page_raw_format.h  ellpack_page_raw_format.mu  ellpack_page_source.h  ellpack_page_source.mu  gradient_index.mu  iterative_dmatrix.h  iterative_dmatrix.mu  proxy_dmatrix.h  proxy_dmatrix.mu  proxy_dmatrix.muh  simple_dmatrix.mu  simple_dmatrix.muh  sparse_page_dmatrix.cc  sparse_page_dmatrix.mu  sparse_page_source.h  sparse_page_source.mu
src/linear/: updater_gpu_coordinate.mu
src/objective/: hinge.cc  hinge.mu  quantile_obj.cc  regression_obj.cc
src/tree/: constraints.mu  constraints.muh  fit_stump.mu  updater_gpu_common.muh  updater_gpu_hist.mu
src/tree/gpu_hist/: evaluate_splits.mu  evaluate_splits.muh  evaluator.mu  expand_entry.muh  feature_groups.mu  gradient_based_sampler.mu  gradient_based_sampler.muh  histogram.mu  histogram.muh  row_partitioner.mu  row_partitioner.muh
(+1 files in other folders)
